--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -35,7 +41,8 @@ dependencies {
     compile 'com.jakewharton:butterknife-compiler:8.7.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:25.3.1'
-        compile 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
+    //    compile 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile(name: 'swip-library', ext: 'aar')
 }
