--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.TestActivity"/>
+        <activity android:name=".view.TestActivity"
+            android:theme="@style/Base.Activity.Theme"/>
+        <activity android:name=".view.activity.BaseActivity"
+            android:theme="@style/Base.Activity.Theme"/>
     </application>
 
 </manifest>
